# protocol_implements_decorator

./: .gitignore  .pre-commit-config.yaml  README.md  implements.py  justfile  name.py  pyproject.toml  readme.md  requirements-dev.txt  setup.py
.github/workflows/: pip-audit.yaml
.mypy_cache/3.10/: _ast.data.json  _ast.meta.json  abc.data.json  abc.meta.json  array.data.json  array.meta.json  ast.data.json  ast.meta.json  builtins.data.json  builtins.meta.json  codecs.data.json  codecs.meta.json  genericpath.data.json  genericpath.meta.json  io.data.json  io.meta.json  mmap.data.json  mmap.meta.json  ntpath.data.json  ntpath.meta.json  posix.data.json  posix.meta.json  posixpath.data.json  posixpath.meta.json  setup.data.json  setup.meta.json  subprocess.data.json  subprocess.meta.json  sys.data.json  sys.meta.json  types.data.json  types.meta.json  typing.data.json  typing.meta.json  typing_extensions.data.json  typing_extensions.meta.json
.mypy_cache/3.10/_typeshed/: __init__.data.json  __init__.meta.json
.mypy_cache/3.10/collections/: __init__.data.json  __init__.meta.json
.mypy_cache/3.10/importlib/: __init__.data.json  __init__.meta.json  abc.data.json  abc.meta.json  machinery.data.json  machinery.meta.json
docs/: index.rst
docs/source/: modules.rst  protocolimplementsdecorator.rst
protocol_implements_decorator/: __init__.py  implements.py  implements.pyi
src/protocolimplementsdecorator/: __init__.py  implements.py
tests/: test_name.py  test_protocol_implements_decorator.py  test_protocolimplementsdecorator.py
utils/: implements.py
(+4 files in other folders)
